# drmp

./: .gitignore  EXPERIMENTS.md  README.md  diff.diff  paper.md  pyproject.toml  requirements.txt  run_inference_multi.ps1  run_inference_multi.sh  setup.py  visualize_env.py
drmp/: config.py  utils.py  visualizer.py
drmp/dataset/: dataset.py  filtering.py  transform.py
drmp/datasets/: dataset.py  filtering.py  normalization.py
drmp/inference/: __init__.py  guides.py  runner.py  runner_config.py
drmp/model/: generative_models.py  temporal_unet.py
drmp/models/: beta_schedules.py  context_models.py  diffusion.py  guides.py  models.py  temporal_unet.py
drmp/planning/: costs.py  factors.py  guide.py  inference.py  inference_config.py  metrics.py
drmp/train/: logs.py  trainer.py
drmp/universe/: environments.py  grid_map_sdf.py  primitives.py  robot.py
drmp/utils/: torch.py  torch_utils.py  trajectory.py  trajectory_utils.py  visualizer.py  yaml.py
drmp/world/: environments.py  grid_map_sdf.py  primitives.py  robot.py
mpd/: __init__.py  config.py
mpd-new/losses/: __init__.py  cvae_loss.py  gaussian_diffusion_loss.py
mpd-new/models/: __init__.py
mpd-new/torch_robotics/: setup.py
mpd/datasets/: normalization.py  trajectories.py
mpd/environments/: __init__.py  env_base.py  env_dense_2d.py  env_dense_2d_extra_objects.py  env_simple_2d.py  (+5 more)
scripts/: convert_dataset_format.py  generate_data.py  inference.py  inference_classical.py  inference_legacy.py  recalculate_dataset_indices.py  train.py  visualize_env_narrow.py  visualize_trajectory.py
(+81 files in other folders)
